orm-tests/tests/snapshots/geometry__polygon.snap
---
source: surreal-orm-tests/tests/geometry.rs
expression: geom
---
TestPolygon {
    id: SurrealId(
        Thing {
            tb: "test_polygon",
            id: Number(
                32,
            ),
        },
        PhantomData<geometry::TestPolygon>,
        PhantomData<i32>,
    ),
    home_polygon: Polygon {
        exterior: LineString(
            [
                Coord {
                    x: -111.0,
                    y: 45.0,
                },
                Coord {
                    x: -111.0,
                    y: 41.0,
                },
                Coord {
                    x: -104.0,
                    y: 41.0,
                },
                Coord {
                    x: -104.0,
                    y: 45.0,
                },
                Coord {
                    x: 0.0,
                    y: 0.0,
                },
                Coord {
                    x: 4.0,
                    y: 0.0,
                },
                Coord {
                    x: 4.0,
                    y: 1.0,
                },
                Coord {
                    x: 1.0,
                    y: 1.0,
                },
                Coord {
                    x: 1.0,
                    y: 4.0,
                },
                Coord {
                    x: 0.0,
                    y: 4.0,
                },
                Coord {
                    x: 0.0,
                    y: 0.0,
                },
                Coord {
                    x: -111.0,
                    y: 45.0,
                },
            ],
        ),
        interiors: [],
    },
}
